@@ -78,4 +78,4 @@ let catch_break on =
 
 (* OCaml version string, must be in the format described in sys.mli. *)
 
-let ocaml_version = "3.06+36 (2003-06-19)";;
+let ocaml_version = "3.06+37 (2003-06-30)";;
