@@ -150,10 +150,14 @@ val filter_self_method:
         type_expr -> Ident.t * type_expr
 val moregeneral: Env.t -> bool -> type_expr -> type_expr -> bool
         (* Check if the first type scheme is more general than the second. *)
+
 val rigidify: type_expr -> type_expr list
         (* "Rigidify" a type and return its type variable *)
 val all_distinct_vars: type_expr list -> bool
-        (* Check those type are all distinct type variables *)
+        (* Check those types are all distinct type variables *)
+val matches : Env.t -> type_expr -> type_expr -> bool
+        (* Same as [moregeneral false], implemented using the two above
+           functions and backtracking. Ignore levels *)
 
 type class_match_failure =
     CM_Virtual_class
